# Algorithm-simulation

./: .gitignore  CMakeLists.txt  config.ini  ideas.txt  setup.txt
assets/game/: GUI.pdn
levels/: testlevel.lvl
levels/testlevel/: testlevel.lvl
src/: CellularAutomata.cpp  CellularAutomata.h  Debug.cpp  Debug.h  Engine.cpp  Engine.h  Enums.h  Input.cpp  Input.h  IntTypes.h  MainScene.cpp  MainScene.h  Object.cpp  Object.h  PerlinNoise.cpp  PerlinNoise.h  Scene.h  Singleton.h  StateButton.cpp  StateButton.h  Texture.cpp  Texture.h  Tile.cpp  Tile.h  TileMap.cpp  TileMap.h  main.cpp  main.h
src_not_as_old/: BoardTile.c  BoardTile.h  DataTypes.c  DataTypes.h  Engine.c  Engine.h  GameMap.c  GameMap.h  GameState.c  GameState.h  Objects.c  Objects.h  Piece.c  Piece.h
src_old/: Obj.cpp  Obj.h  TEXTURES.h  main.cpp
src_old/editor/: EditorState.cpp  EditorState.h  EntityMenu.cpp  EntityMenu.h  FileSelButton.cpp  FileSelButton.h  LayerMenu.cpp  LayerMenu.h  TileMenu.cpp  TileMenu.h
src_old/engine/: AssetManager.cpp  AssetManager.h  Config.cpp  Config.h  Game.cpp  Game.h  InputManager.cpp  InputManager.h  LevelHandler.cpp  LevelHandler.h  OSChecker.h  ObjectHandler.cpp  ObjectHandler.h  State.h  StateMachine.cpp  StateMachine.h  VarOperator.cpp  VarOperator.h
src_old/game/: GameData.h  GameState.cpp  GameState.h
src_old/gameobjs/: GameObj.cpp  GameObj.h  IDs.h  InvItem.cpp  InvItem.h
src_old/menu/: MenuState.cpp  MenuState.h  MenuStateButtons.cpp  MenuStateButtons.h  OptionState.cpp  OptionState.h  OptionStateButtons.cpp  OptionStateButtons.h  VideoState.cpp  (+3 more)
(+14 files in other folders)
